--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -232,8 +232,8 @@ aside:
       text: Follow Me
       link: https://github.com/xxxxxx
   card_announcement:
-    enable: true
-    content: This is my Blog
+    enable: false
+    content: 暂无公告
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
